substrate/frame/support/test/tests/pallet_ui/call_weight_inherited_invalid2.stderr
error[E0412]: cannot find type `prefix` in this scope
  --> tests/pallet_ui/call_weight_inherited_invalid2.rs:39:24
   |
39 |     #[pallet::call(weight(prefix))]
   |                           ^^^^^^ not found in this scope

error[E0412]: cannot find type `prefix` in this scope
  --> tests/pallet_ui/call_weight_inherited_invalid2.rs:60:26
   |
60 |     #[pallet::call(weight = prefix)]
   |                             ^^^^^^ not found in this scope
